test/TestPhases/typechecker/invalid/SideEffect4.blc
function f(a: int32)(b: int32) returns int32
    b = a
    return a
end

@[EntryPoint]
activity P(a: int32)(x: int32)
    var arr: [10]int32
    await arr[f(a)(x)] > 0
end